# PraktikaFramework

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
src/praktika/: Data.py  LoadData.py  Plot.py  PlotExperimental.py  Table.py  __init__.py  classMA.py  functions.py  latexTable.py  mainPlot.py  mainTable.py
src/praktika.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
