[metadata]
name = praktika
description = Helper functions and classes built on top of QExPy
author = Samuel Jankovych
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    praktika
install_requires =
    qexpy>=2.0
    numpy>=1.21
    pandas>=1.2
    matplotlib>=3.4
    regex>=2.2
python_requires = >=3.6
package_dir =
    =src
zip_safe = no